@@ -7,6 +7,8 @@
 Фичи
 ----
 
+* отвалился архив в rewrite
+* отвалились rtmp стримы в rewrite
 * проверить mixer
 * Другие авторизационные бекенды
 * per-ip session limit
@@ -17,6 +19,7 @@
 * messaging
 * Подумать как отдавать метадату с временем текущего сегмента
 * хранение метадаты в архиве
+* ключи в HLS
 
 Архив
 -----
@@ -27,7 +30,6 @@
 HLS DRM
 -------
 
-* ключи в HLS
 * внешний поток ключей от отдельного биллинга
 * ключи хранить в минутных файлах
 
