@@ -8,7 +8,8 @@
 }
 
 #wrapper {
-  padding: 0 40px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 #main {
